--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Django==6.0
-Pillow==10.0.0
-python-decouple==3.8
 pytz==2025.1
-sqlparse==1.8.3
-PyMySQL==1.1.2
+sqlparse==0.5.5
+python-decouple==3.8
+Pillow==10.4.0
+Django==6.0
+mysqlclient
